--- a/index.html
+++ b/index.html
@@ -12,10 +12,19 @@
         <div class="cartao__conteudo"> </div>
         <h3>Programação</h3>
         <div class="cartao__conteudo__pergunta">
-            O que é JavaScript?
-            <div class="cartao__conteudo__reposta">
-                O JavaScript é uma linguagem de programação
-            </div>
+         O que é JavaScript?
+         <div class="cartao__conteudo__reposta">
+        O JavaScript é uma linguagem de programação
+        </div>
+        </div>
+        <div class=”cartao__conteudo”>
+        <h3>Programação</h3>
+        <div class=”cartao__conteudo__pergunta”>
+        O que é CSS?
+        </div>
+         <div class=”cartao__conteudo__resposta”>
+        O CSS é uma linguagem de estilização.
+        </div>
         </div>
     </article>
    </section>
