--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
         </div>
         </div>
     </article>
+    <article class=”cartao”>
+        <div class=”cartao__conteudo”> </div>
+        <h3>Programação</h3>
+        <div class=”cartao__conteudo__pergunta”>
+            O que é CSS?
+            <div class=”cartao__conteudo__resposta”>
+                O CSS é uma linguagem de estilização.
+            </div>
+        </div>
+    </article>
    </section>
    </main> 
 
