--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div class="cartao__conteudo"> </div>
         <h3>Programação</h3>
         <div class="cartao__conteudo__pergunta">
-            O que é JavaScript?
+            <p>O que é JavaScript?</p>
             <div class="cartao__conteudo__reposta">
-                O JavaScript é uma linguagem de programação
+                <p>O JavaScript é uma linguagem de programação</p>
             </div>
         </div>
     </article>
@@ -23,9 +23,9 @@
         <div class=”cartao__conteudo”> </div>
         <h3>Programação</h3>
         <div class=”cartao__conteudo__pergunta”>
-            O que é CSS?
+            <p>O que é CSS?</p>
             <div class=”cartao__conteudo__resposta”>
-                O CSS é uma linguagem de estilização.
+                <p>O CSS é uma linguagem de estilização.</p>
             </div>
         </div>
     </article>
