--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
         <div class="cartao__conteudo"> </div>
         <h3>Programação</h3>
         <div class="cartao__conteudo__pergunta">
-            <p>O que é JavaScript?</p> </div>
+            <p>O que é JavaScript?</p> 
+            </div>
             <div class="cartao__conteudo__reposta">
-                <p>O JavaScript é uma linguagem de programação</p> </div>
+                <p>O JavaScript é uma linguagem de programação</p> 
+            </div>
             </div>
         </div>
     </article>
@@ -23,9 +25,11 @@
         <div class=”cartao__conteudo”> </div>
         <h3>Programação</h3>
         <div class=”cartao__conteudo__pergunta”>
-            <p>O que é CSS?</p> </div>
+            <p>O que é CSS?</p> 
+            </div>
             <div class=”cartao__conteudo__resposta”>
-                <p>O CSS é uma linguagem de estilização.</p> </div>
+                <p>O CSS é uma linguagem de estilização.</p> 
+            </div>
             </div>
         </div>
     </article>
